src/test/resources/30/single/xhtml/invalid/epubtype-disallowed.xhtml
<!DOCTYPE html>	 
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="en">
  <head>
    <title>Test</title>
  </head>
  <!-- All these properties are reported as ERRORs,
       as they're disallowed in an XHTML context
       (they're only allowed in Media Overlay) -->
  <body>
    <h1>Test</h1>
    <table epub:type="table">
      <tr epub:type="table-row">
        <td epub:type="table-cell">cell</td>
      </tr>
    </table>
    <ul epub:type="list">
      <li epub:type="list-item">item</li>
    </ul>
    <figure epub:type="figure"> Figure </figure>
  </body>
</html>
